--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo about authentication using jwt",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node test3.js",
     "dev": "nodemon test3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
