--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "music-album",
     "builds": [
         {
-            "src": "test3.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/test3.js"
+            "dest": "/index.js"
         }
     ]
 }
