--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fuzzy": "^0.1.3",
     "google-auth-library": "^0.12.0",
     "googleapis": "^110.0.0",
     "javascript-data-structures": "^1.0.0",
